2008-xx-xx - release x.x
        - Bugfix: Ignore trailing separation characters of B-* parameters

2008-02-24 - release 0.6.2
        - Bugfix: Read the correct pins when determining the device
                  address in LarsP and NKC configurations

2008-02-22 - release 0.6.1
        - support for NKC MMC2IEC boards (untested)
        - case-insensitive matching of M2I and D64

2008-02-20 - release 0.6
        - Bugfix: Properly emulate B-R/B-W (fixes Pirates!)
        - Bugfix: Close buffers on I (fixes Drazpaint)
        - Bugfix: Create new error message after closing channel 15
        - Bugfix: Check for illegal track/sector while D64 is active
        - reworked source configuration system
        - externalized bootloader signature generation
        - Support for long file names on FAT
        - M-R returns (random) data
        - New commands E-R, E-W: Read/write reserved area of EEPROM
        - Added U0> for device address changes
        - device address is stored in the EEPROM
        - Directories starting with . are hidden in FAT
        - support for sd2iec 1.0 PCBs

2008-01-13 - release 0.5.1
        - Bugfix: Really disable JTAG - fixes very slow access on some
          hardware variants

2008-01-12 - release 0.5
        - Bugfix: Recode ~/pi in both directions
        - Bugfix: Fastloaders now work on LarsP-style hardware too
        - Disk change key support
        - Full JiffyDos support
        - EEPROM configuration storage
        - Full support for D64, read/write/sector access

2007-12-25 - release 0.4.2
        - Bugfix: LarsP-style hardware actually works now

2007-12-19 - release 0.4.1
        - Bugfix: Creating a new file within an M2I image wrote
                  a terminating zero byte into the M2I directory entry
        - Bugfix: Another guesstimated delay in iec_putc
        - AVR Studio project file updated

2007-12-07 - release 0.4
        - Extended DOS commands:
          - Enable/Disable JiffyDOS