@@ -1,5 +1,6 @@
 2008-xx-xx - release x.x
         - Bugfix: Ignore trailing separation characters of B-* parameters
+        - Match trailing part of names after * too
 
 2008-02-24 - release 0.6.2
         - Bugfix: Read the correct pins when determining the device
